feat: NavBar start feaching

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --callout-rgb: 238, 240, 241;
+  --accent-color: rgb(220, 1, 50);
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
