fix: fail dep;oy

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,9 +6,7 @@
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
   --accent-color: rgb(220, 1, 50);
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --white-color: rgb(255, 255, 255);
 }
 
 * {
