feat: cart quantity

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,8 @@
 
   --swiper-pagination-color: var(--accent-color);
   --swiper-navigation-color: var(--text-color);
+
+  --max-container-width: 1440px;
 }
 
 * {
