--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
 
   --accent-color: rgb(220, 1, 50);
   --grey-background-color: rgb(245, 245, 245);
+  --grey-border-color: rgb(231, 231, 231);
   --text-color: rgb(0, 0, 0);
 
   --white-color: rgb(255, 255, 255);
