feat: add route for Single Product

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
   --grey-background-color: rgb(245, 245, 245);
   --grey-border-color: rgb(231, 231, 231);
   --text-color: rgb(0, 0, 0);
+  --grey-text-color: rgb(194, 194, 194);
 
   --white-color: rgb(255, 255, 255);
 
