--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,7 @@ li {
 .swiper-for-navigation .swiper-slide:hover {
   border: 1px solid var(--grey-text-color);
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .swiper-for-navigation .swiper-slide.swiper-slide-thumb-active {
